{{$NEXT}}

1.5       2012-12-14 12:40:58 America/New_York

 * Added minimum Test::More version of 0.88 to tests.

1.4       2012-08-28 15:09:51 America/New_York

 * Fix 1.0-backcompat crashing bug for GFF3 files with multi-location features.

1.3       2012-04-25 09:52:00 America/New_York

 * Correct synopsis section of Bio::GFF3::LowLevel::Parser.

1.2       2012-04-13 17:47:29 America/New_York

 * Removed unnecessary dependency on
   Bio::GFF3::Transform::SyncDirectives that was causing installation
   problems.

1.1       2012-04-13 01:32:21 America/New_York

 * Changed the default API of Bio::GFF3::LowLevel::Parser to support
   multi-loc features.  In order to be able to group feature lines
   that hand in some cases it would not be possibleave the same ID
   attribute, it now returns arrayrefs that are groups of the
   formerly-returned hashrefs.

 * HOWEVER, there is a backward-compatibility layer that back-converts
   the features to the conform to the return types in 1.1.  Existing
   users of this code should not be adversely affected.

 * Add better support for Derives_from: feature line hashrefs now have
   a derived_features attribute holding an arrayref of the features
   that Derives_from this one.

 * Remove assumptions in the parser about child features coming after
   their parents in the file.  The GFF3 specification does not require
   this.

1.0       2012-03-21 00:51:41 America/Los_Angeles

 * made parsing twice as fast as version 0.9, thanks to Devel::NYTProf
 * fix bad bug with dropping the last few features in files with sync
   directives

0.9       2012-03-20 20:26:04 America/Los_Angeles

 * write the missing documentation
 * make all features have child_features, for convenience
 * strip whitespace from the end of comments before returning them

0.8       2012-03-20 17:24:50 America/Los_Angeles

 * bugfix to handling of windows line-endings: parsers now remove them
   regardless of the platform on which we are running.